# Gyutto

./: README.md
backend-rust/: .gitignore_  Cargo.toml
backend-rust/src/: main.rs
frontend-react/: Dockerfile  docker-compose.yml
frontend-react-native/: App.js  app.json  package-lock.json  package.json
frontend-react-native/.git_/: index
frontend-react-native/.git_/logs/refs/heads/: master
frontend-react-native/.git_/refs/heads/: master
frontend-react-native/assets/B - 0 or 1 Swap_files/: base.css  base.js.ダウンロード  contest.css  frame.html  ja.js.ダウンロード  log  sm.23.html
frontend-react-native/components/: CampaignSlider.js  Creator.js  Works.js
frontend-react-native/navigation/: BottomTabNavigator.js  DrawerNavigator.js  HomeTabNavigator.js
frontend-react-native/screens/: ChatScreen.js  FavoriteScreen.js  HomeScreen.js  InformationScreen.js  MypageScreen.js
frontend-react/project-0-0/: package-lock.json  package.json
frontend-react/project-0-0/src/: App.js
