[package]
name = "rust_web_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.0.1"
#rocket = "0.4.10"
#rocket_cors = "0.5.2"
serde = {version="1.0.137", features=["derive"]}
thiserror = "1.0.31"
